--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <div class="container">
         <header class="row">
-            <div class="logo col-7">
-                <img src="./imgs/logo.png" alt="logo">
+            <div class="logo col-xl-7 col-md-12 col-12">
+                <img src="./imgs/logo.png" class="img-fluid"  alt="logo">
             </div>
-            <div class="semana col-5 text-right">
+            <div class="semana col-xl-5 col-md-12 col-12 text-right">
                 <div class="row">
                     <div class="col">
                         <div class="tipo-fecha text-center derecha">
@@ -24,9 +24,9 @@
                             <span class="tipo-dia">JULIO</span>
                         </div>
                     </div>
-                    <div class="al text-center">
+                    <!-- <div class="al text-center">
                         al
-                    </div>
+                    </div> -->
                     <div class="col">
                         <div class="tipo-fecha text-center">
                             <span class="tipo-dia">DOMINGO</span><br><span class="tipo-nro">30</span><br>
@@ -36,37 +36,37 @@
                 </div>
             </div>
         </header>
-        <div text-center>
+        <div class="text-center">
             <span class="titulo">LAS MEJORES OFERTAS EN</span><br><span
                 class="subtitulo">ALIMENTOS-ALMACEN-PERFUMERIA-LIMPIEZA</span>
         </div>
         <div class=" row cuerpo no-gutters">
-            <div class="col principal">
+            <div class="col-xl-6 col-lg-6  col-md-6 col-12 principal">
                 <img src="./imgs/principal.png" alt="principal">
             </div>
-            <div class="col secundario">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-12 secundario">
                 <div class="row no-gutters">
                     <div class="col">
-                        <img src="./imgs/prod-1.png" alt="prod-1">
-                        <img src="./imgs/prod-1.png" alt="prod-1">
+                        <img src="./imgs/prod-1.png" class="img-fluid" alt="prod-1">
+                        <img src="./imgs/prod-1.png" class="img-fluid" alt="prod-1">
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <img src="./imgs/prod-1.png" alt="prod-1">
-                        <img src="./imgs/prod-1.png" alt="prod-1">
+                        <img src="./imgs/prod-1.png" class="img-fluid" alt="prod-1">
+                        <img src="./imgs/prod-1.png" class="img-fluid" alt="prod-1">
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <img src="./imgs/prod-1.png" alt="prod-1">
-                        <img src="./imgs/prod-1.png" alt="prod-1">
+                        <img src="./imgs/prod-1.png" class="img-fluid" alt="prod-1">
+                        <img src="./imgs/prod-1.png" class="img-fluid" alt="prod-1">
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <img src="./imgs/prod-1.png" alt="prod-1">
-                        <img src="./imgs/prod-1.png" alt="prod-1">
+                        <img src="./imgs/prod-1.png" class="img-fluid" alt="prod-1">
+                        <img src="./imgs/prod-1.png" class="img-fluid" alt="prod-1">
                     </div>
                 </div>
 
