--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <div class="container">
         <header class="row">
-            <div class="logo col-xl-7 col-md-12 col-12">
-                <img src="./imgs/logo.png" class="img-fluid"  alt="logo">
+            <div class="logo col-xl-7 col-md-12 col-12 d-flex">
+                <img src="./imgs/logo.png" class="img-fluid mx-auto" alt="logo">
             </div>
-            <div class="semana col-xl-5 col-md-12 col-12 text-right">
-                <div class="row">
-                    <div class="col">
-                        <div class="tipo-fecha text-center derecha">
+            <div class="semana col-xl-5 col-md-12 col-12 d-flex">
+                <div class="row mx-auto">
+                    <div class="col-6 col-lg-5 col-md-5">
+                        <div class="tipo-fecha text-center">
                             <span class="tipo-dia">LUNES</span><br><span class="tipo-nro">24</span><br>
                             <span class="tipo-dia">JULIO</span>
                         </div>
@@ -27,7 +27,7 @@
                     <!-- <div class="al text-center">
                         al
                     </div> -->
-                    <div class="col">
+                    <div class="col-6 col-lg-5 col-md-5">
                         <div class="tipo-fecha text-center">
                             <span class="tipo-dia">DOMINGO</span><br><span class="tipo-nro">30</span><br>
                             <span class="tipo-dia">JULIO</span>
